...
import com.example.mumble.utils.extensions.observeFlowSafely
import com.example.mumble.utils.extensions.usingContext

val tagDisclaimer = IntroductionScreenTags.Disclaimer.toString()
val tagNickname = IntroductionScreenTags.NicknameTextField.toString()
val tagError = IntroductionScreenTags.ErrorText.toString()
val tagGoButton = IntroductionScreenTags.GoButton.toString()

@Composable
fun IntroductionScreen(
    navController: NavController = rememberNavController(),
    viewModel: IntroductionViewModel = hiltViewModel(),
) {
...
